workspace = { members = ["app", "fuzz"] }

[package]
name = "yuvutils-rs"
version = "0.5.14"
edition = "2021"
description = "High performance utilities for YUV format handling and conversion."
readme = "README.md"
keywords = ["yuv", "ycbcr", "yuv2rgb", "rgb2yuv", "converter"]
license = "BSD-3-Clause OR Apache-2.0"
authors = ["Radzivon Bartoshyk"]
documentation = "https://github.com/awxkee/yuvutils-rs"
categories = ["multimedia::images", "multimedia::video"]
homepage = "https://github.com/awxkee/yuvutils-rs"
repository = "https://github.com/awxkee/yuvutils-rs"
exclude = ["*.jpg", "assets/*", "*.png", "assets/bench.jpg"]
rust-version = "1.82.0"

[dependencies]
num-traits = "0.2.19"
rayon = { version = "1.10.0", optional = true }

[dev-dependencies]
rand = "0.8.5"

[features]
default = []
nightly_avx512 = []
rayon = ["dep:rayon"]

[profile.dev.package]
miniz_oxide.opt-level = 3
png.opt-level = 3
flate2.opt-level = 3
image.opt-level = 3

