workspace = { members = ["app", "fuzz"] }

[package]
name = "yuvutils-rs"
version = "0.6.0"
edition = "2021"
description = "High performance utilities for YUV format handling and conversion."
readme = "README.md"
keywords = ["yuv", "ycbcr", "yuv2rgb", "rgb2yuv", "converter"]
license = "BSD-3-Clause OR Apache-2.0"
authors = ["Radzivon Bartoshyk"]
documentation = "https://github.com/awxkee/yuvutils-rs"
categories = ["multimedia::images", "multimedia::video"]
homepage = "https://github.com/awxkee/yuvutils-rs"
repository = "https://github.com/awxkee/yuvutils-rs"
exclude = ["*.jpg", "assets/*", "*.png", "assets/bench.jpg"]
rust-version = "1.82.0"

[dependencies]
num-traits = "0.2.19"
rayon = { version = "1.10.0", optional = true }
fast_transpose = "0.2.3"

[dev-dependencies]
rand = "0.8.5"

[features]
default = ["avx", "sse", "rdm"]
# On x86 architectures runtime dispatch is used to detect if AVX, SSE is available
# disable those features only for testing or reducing binary size, if you're sure that your hardware
# do not support it or already shadowed by another feature.
#
# It is safe to enable any features because all features availability will be checked at runtime.
avx = []
sse = []
# RDM corresponds FEAT_RDM on ARM
rdm = []
nightly_f16 = []
nightly_avx512 = ["fast_transpose/nightly_avx512"]
# nightly_i8mm corresponds FEAT_I8MM on ARM
nightly_i8mm = []
fast_mode = []
professional_mode = []
rayon = ["dep:rayon"]

[profile.dev.package]
miniz_oxide.opt-level = 3
png.opt-level = 3
flate2.opt-level = 3
image.opt-level = 3

