[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
yuvutils-rs = { path = "..", features = ["nightly_f16", "fast_mode"] }
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg"]}
yuv-sys = "0.3.7"

[features]
nightly_avx512 = ["yuvutils-rs/nightly_avx512"]
nightly_i8mm = ["yuvutils-rs/nightly_i8mm"]
fast_mode = ["yuvutils-rs/fast_mode"]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "yuv8"
harness = false

[[bench]]
name = "yuv16"
harness = false

[[bench]]
name = "geometry"
harness = false
