[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
yuv = { path = "..", features = ["nightly_f16", "fast_mode", "sse", "avx", "professional_mode", "rdm", "nightly_avx512", "rdp", "ycgco_r_type"], default-features = false }
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg"] }
yuv-sys = "0.3.7"
rand = "0.9.0"
bytemuck = "1.23.0"

[features]
nightly_avx512 = ["yuv/nightly_avx512"]
nightly_i8mm = ["yuv/nightly_i8mm"]
fast_mode = ["yuv/fast_mode"]
rdm = ["yuv/rdm"]
professional_mode = ["yuv/professional_mode"]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "yuv8"
harness = false

[[bench]]
name = "yuv16"
harness = false

[[bench]]
name = "geometry"
harness = false

[[bench]]
name = "rdp"
harness = false
