[package]
name = "app-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
yuvutils-rs = {path = ".."}

[[bin]]
name = "yuv_to_rgb"
path = "yuv_to_rgb/yuv_to_rgb.rs"
test = false
doc = false
bench = false

[[bin]]
name = "yuv_nv_to_rgb"
path = "yuv_nv_to_rgb/yuv_nv_to_rgb.rs"
test = false
doc = false
bench = false

[[bin]]
name = "y_to_rgb"
path = "y_to_rgb/y_to_rgb.rs"
test = false
doc = false
bench = false
