[package]
name = "app-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = "1.4.1"
libfuzzer-sys = "0.4"
yuvutils-rs = { path = "..", features = ["nightly_f16", "fast_mode", "professional_mode", "rdp"], default-features = false }

[features]
default = []
avx = ["yuvutils-rs/avx"]
sse = ["yuvutils-rs/sse"]
rdm = ["yuvutils-rs/rdm"]
nightly_avx512 = ["yuvutils-rs/nightly_avx512"]
nightly_i8mm = ["yuvutils-rs/nightly_i8mm"]

[[bin]]
name = "yuv_to_rgb"
path = "yuv_to_rgb/yuv_to_rgb.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gbr_to_rgb"
path = "gbr_to_rgb/gbr_to_rgb.rs"
test = false
doc = false
bench = false

[[bin]]
name = "yuv_nv_to_rgb"
path = "yuv_nv_to_rgb/yuv_nv_to_rgb.rs"
test = false
doc = false
bench = false

[[bin]]
name = "yuv_nv16_to_rgb16"
path = "yuv_nv16_to_rgb16/yuv_nv16_to_rgb16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "yuv_nv10_to_rgb"
path = "yuv_nv10_to_rgb/yuv_nv10_to_rgb.rs"
test = false
doc = false
bench = false

[[bin]]
name = "y_to_rgb"
path = "y_to_rgb/y_to_rgb.rs"
test = false
doc = false
bench = false

[[bin]]
name = "yuv16_to_rgb16"
path = "yuv16_to_rgb16/yuv16_to_rgb16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "yuv16_to_rgb_f16"
path = "yuv16_to_rgb_f16/yuv16_to_rgb_f16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "yuv16_to_ar30"
path = "yuv16_to_ar30/yuv16_to_ar30.rs"
test = false
doc = false
bench = false

[[bin]]
name = "y16_to_rgb16"
path = "y16_to_rgb16/y16_to_rgb16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "yuv_to_yuyu2"
path = "yuv_to_yuyu2/yuv_to_yuyu2.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rgb_to_yuv"
path = "rgb_to_yuv/rgb_to_yuv.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rdp"
path = "rdp/rdp.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rgb16_to_yuv16"
path = "rgb16_to_yuv16/rgb16_to_yuv16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rgb_to_y"
path = "rgb_to_y/rgb_to_y.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rgb_to_nv"
path = "rgb_to_nv/rgb_to_nv.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rgb16_to_nv16"
path = "rgb16_to_nv16/rgb16_to_nv16.rs"
test = false
doc = false
bench = false

[[bin]]
name = "shuffle"
path = "shuffle/shuffle.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rgb_to_f16"
path = "rgb_to_f16/rgb_to_f16.rs"
test = false
doc = false
bench = false
